--- a/投资人管理.html
+++ b/投资人管理.html
@@ -236,7 +236,7 @@
         </div>
 
         <!-- Unnamed (组合) -->
-        <div id="u749" class="ax_default" data-left="902" data-top="275" data-width="115" data-height="319">
+        <div id="u749" class="ax_default" data-left="1048" data-top="275" data-width="115" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u750" class="ax_default shape">
@@ -304,7 +304,7 @@
         </div>
 
         <!-- Unnamed (组合) -->
-        <div id="u760" class="ax_default" data-left="770" data-top="275" data-width="89" data-height="319">
+        <div id="u760" class="ax_default" data-left="916" data-top="275" data-width="89" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u761" class="ax_default shape">
@@ -324,13 +324,13 @@
         </div>
 
         <!-- Unnamed (组合) -->
-        <div id="u763" class="ax_default" data-left="1060" data-top="275" data-width="108" data-height="319">
+        <div id="u763" class="ax_default" data-left="612" data-top="275" data-width="103" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u764" class="ax_default shape">
             <div id="u764_div" class=""></div>
             <div id="u764_text" class="text ">
-              <p><span>应付分成</span></p>
+              <p><span>入驻时间</span></p>
             </div>
           </div>
 
@@ -338,13 +338,13 @@
           <div id="u765" class="ax_default shape">
             <div id="u765_div" class=""></div>
             <div id="u765_text" class="text ">
-              <p><span>0.5634 BTC</span></p><p><span>0.5634 BTC</span></p><p><span>0.5634 BTC</span></p><p><span>0.5634 BTC</span></p><p><span>0.5634 BTC</span></p>
+              <p><span>2019/10/14</span></p><p><span>2019/10/14</span></p><p><span>2019/10/14</span></p><p><span>2019/10/14</span></p><p><span>2019/10/14</span></p>
             </div>
           </div>
         </div>
 
         <!-- Unnamed (组合) -->
-        <div id="u766" class="ax_default" data-left="612" data-top="275" data-width="115" data-height="319">
+        <div id="u766" class="ax_default" data-left="758" data-top="275" data-width="115" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u767" class="ax_default shape">
